ppx/tests/failing/7.ml
let[@reaml.component] _foo () = ()
